[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "stdlib_list"

[tool.flit.sdist]
include = ["tests/"]

[project]
name = "stdlib-list"
dynamic = ["version"]
description = "A list of Python Standard Libraries (2.6-2.7, 3.2-3.14)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jack Maney", email = "jackmaney@gmail.com" }]
maintainers = [{ name = "William Woodruff", email = "william@yossarian.net" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
requires-python = ">=3.10"

[project.urls]
Homepage = "https://pypi.org/project/stdlib-list/"
Issues = "https://github.com/pypi/stdlib-list/issues"
Source = "https://github.com/pypi/stdlib-list"
Documentation = "https://pypi.github.io/stdlib-list/"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage[toml]"]
lint = ["mypy", "ruff"]
doc = ["sphinx", "furo"]
dev = ["build", "stdlib-list[test,lint,doc]"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
lint.select = ["E", "F", "I", "W", "UP"]
line-length = 100
